--- a/ab/index.html
+++ b/ab/index.html
@@ -10,7 +10,7 @@
 
 <script type="text/javascript">
   // Definir URLs de destino
-  const urls = ["https://diabetesreversa.online/cartpanda/l1", "https://diabetesreversa.online/cartpanda/l2"];
+  const urls = ["https://healthydiabeticliving.online/l1", "https://healthydiabeticliving.online/l2"];
   // Definir porcentagem de tráfego para cada URL
   const trafficSplit = [0.50, 0.50];
 
