--- a/l1/index.html
+++ b/l1/index.html
@@ -25,7 +25,7 @@
   <!-- PIXEL AQUI !-->
 
 <script>
-  window.pixelId = "66762083b81779c97e0621b0";
+  window.pixelId = "668802ab2ef098874adcfd50";
   var a = document.createElement("script");
   a.setAttribute("async", "");
   a.setAttribute("defer", "");
@@ -345,12 +345,12 @@
   <div class="container w-container">
     <div class="w-embed w-script">
       <img src='https://i.postimg.cc/t4GNg5yb/head.png' alt='headline'/>
-    <div id="vid_665bd394db56b8000bc090df" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_665bd394db56b8000bc090df" src="https://images.converteai.net/9d1f4327-1dc5-46ae-8030-267fa8685435/players/665bd394db56b8000bc090df/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_665bd394db56b8000bc090df" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_665bd394db56b8000bc090df"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/9d1f4327-1dc5-46ae-8030-267fa8685435/players/665bd394db56b8000bc090df/player.js", s.async=!0,document.head.appendChild(s); </script> <style> .elementor-element:has(#smartplayer) { width: 100%; } </style>
+    <div id="vid_6688050b9a2ef9000b1320ea" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_6688050b9a2ef9000b1320ea" src="https://images.converteai.net/4c29a198-eab5-435d-8ccf-d054b8f92086/players/6688050b9a2ef9000b1320ea/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_6688050b9a2ef9000b1320ea" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_6688050b9a2ef9000b1320ea"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/4c29a198-eab5-435d-8ccf-d054b8f92086/players/6688050b9a2ef9000b1320ea/player.js", s.async=!0,document.head.appendChild(s); </script> <style> .elementor-element:has(#smartplayer) { width: 100%; } </style>
     </div>
       <div class="div-block"><img src="images/audio.svg" loading="lazy" alt="" class="image">
         <h1 class="legend"> ¡ASEGÚRESE DE QUE SU SONIDO ESTÉ ACTIVADO!</h1>
       </div>
-      <a href="https://omni-digital.mycartpanda.com/checkout/135611766:1?src=lead1" class="esconder button animated-button1 full-width _2 w-inline-block">
+      <a href="https://omni-digital.mycartpanda.com/checkout/135611766:1?afid=JJN2Y5GjPc?src=lead1" class="esconder button animated-button1 full-width _2 w-inline-block">
         <div class="text-block-67">Quiero acceder al Sistema Diabetes Revertida</div>
         <div class="w-embed"><span></span>
           <span></span>
@@ -358,7 +358,7 @@
           <span></span>
         </div>
       </a>
-      <link rel="prefetch" href="https://omni-digital.mycartpanda.com/checkout/135611766:1?src=lead1">
+      <link rel="prefetch" href="https://omni-digital.mycartpanda.com/checkout/135611766:1?afid=JJN2Y5GjPc?src=lead1">
     </div>
   </div>
    <div class="wf-section">
